--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #FDFCDC; /* Updated background color */
-            color: #0F110C; /* Updated text color */
+            background-color: #FDFCDC; /* Background color */
+            color: #0F110C; /* Text color */
         }
         .container {
             max-width: 800px;
@@ -24,7 +24,7 @@
         }
         h2 {
             font-size: 1.5em;
-            color: #0F110C; /* Updated text color */
+            color: #0F110C; /* Text color */
             margin-bottom: 2em;
         }
         .content {
@@ -34,7 +34,19 @@
         p {
             font-size: 1.1em;
             line-height: 1.6;
-            color: #0F110C; /* Updated text color */
+            color: #0F110C; /* Text color */
+        }
+        a {
+            display: inline-block; /* Make the link a block element */
+            padding: 10px 20px; /* Add padding */
+            background-color: #1A73E8; /* Background color */
+            color: white; /* Text color */
+            text-decoration: none; /* Remove underline */
+            border-radius: 25px; /* Rounded corners */
+            transition: background-color 0.3s ease; /* Smooth hover effect */
+        }
+        a:hover {
+            background-color: #1557B2; /* Darker background on hover */
         }
     </style>
 </head>
@@ -44,7 +56,8 @@
         <h2>Personal blog posting about my tech journey</h2>
         <div class="content">
             <p>Here is how to resize storage partition using GParted:</p>
-            <!-- Add your detailed content about GParted here -->
+            <!-- Rounded-corner rectangle link -->
+            <p>For a detailed guide, check out this <a href="https://example.com" target="_blank">tutorial on GParted</a>.</p>
         </div>
     </div>
 </body>
