--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <h1>Atomic Codes</h1>
         <h2>Personal blog posting about my tech journey</h2>
         <div class="content">
-            <p>Here is how to resize storage partition using GParted:</p>
-            <!-- Rounded-corner rectangle link -->
-            <p>For a detailed guide, check out this <a href="https://example.com" target="_blank">tutorial on GParted</a>.</p>
+            <p>Here is how to resize storage partition using GParted <a href="https://example.com" target="_blank">tutorial on GParted</a>.</p>
+            <p>An AI generated cow content <a href="https://github.com/fahadullahfahim/atomicnotes/blob/77773438559e3e908acd6a7b79a268376c3bf2aa/The%20Marvelous%20Cow.md" target="_blank">read Marvelous Cow</a>
+</p>
         </div>
     </div>
 </body>
