--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #FDFCDC; /* Background color */
-            color: #0F110C; /* Text color */
+            background-color: #D8CFAF; /* Background color */
+            color: #11151C; /* Text color */
         }
         .container {
             max-width: 800px;
@@ -39,14 +39,14 @@
         a {
             display: inline-block; /* Make the link a block element */
             padding: 5px 10px; /* Add padding */
-            background-color: #1A73E8; /* Background color */
-            color: white; /* Text color */
+            background-color: #A31621; /* Background color */
+            color: #D8CFAF; /* Text color */
             text-decoration: none; /* Remove underline */
-            border-radius: 5px; /* Rounded corners */
+            border-radius: 10px; /* Rounded corners */
             transition: background-color 0.3s ease; /* Smooth hover effect */
         }
         a:hover {
-            background-color: #1557B2; /* Darker background on hover */
+            background-color: #11151C; /* background on hover */
         }
     </style>
 </head>
@@ -56,7 +56,7 @@
         <h2>Personal blog posting about my tech journey</h2>
         <div class="content">
             <p>Here is how to resize storage partition using GParted <a href="https://example.com" target="_blank">tutorial on GParted</a>.</p>
-            <p>An AI generated cow content <a href="https://fahadullahfahim.github.io/atomicnotes/the-marvelous-cow.html" target="_blank">read Marvelous Cow </a>
+            <p>AI generated cow content <a href="https://fahadullahfahim.github.io/atomicnotes/the-marvelous-cow.html" target="_blank">read Marvelous Cow </a>
 </p>
         </div>
     </div>
